--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,7 @@ name: Test reminder
 on:
   # Trigger the workflow on push or pull request,
   # but only for the master branch
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
